# predictive_maintenance

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  PROJECT_SPEC.md  README.md  STATUS.md  TASKS.md  compose.yaml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260712_0001_loop6_operational_schema.py  20260713_0002_loop8_replay_and_outcomes.py  20260713_0003_loop9_model_lifecycle.py
docs/: architecture.md  containers.md  dashboard_deployment.md  data_contract.md  database.md  features.md  limitations.md  mlflow.md  model_card.md  modeling.md  monitoring.md  online_inference.md  portfolio.md  replay.md  scaling.md
docs/adr/: 0001-loop2-tabular-processing-dependencies.md  0002-loop3-labels-splits-features.md  0003-loop4-offline-modeling-evaluation.md  0004-loop5-mlflow-tracking-registry.md  0005-loop6-postgresql-operational-persistence.md  0006-loop7-online-inference-service.md  0007-loop8-replay-delayed-feedback.md  0008-loop9-monitoring-retraining-promotion.md  0009-loop10-containers-ci.md  0010-loop11-dashboard-render-public-demo.md  0011-loop11-zero-cost-demo-deployment.md  0012-loop12-portfolio-finishing.md
notebooks/: 01_eda.ipynb
scripts/: bootstrap.py  build_features.py  deployment_bundle.py  docker_smoke.sh  download_data.py  healthcheck.py  mlflow_models.py  model_lifecycle.py  process_data.py  replay_sensor_data.py  run_api.py  smoke_api.py  start_demo.py  train_models.py  verify_container.sh
src/turbine_guard/: __init__.py  bootstrap.py  logging_config.py
src/turbine_guard/api/: app.py  cli.py  errors.py
src/turbine_guard/config/: settings.py
src/turbine_guard/data/: __init__.py  acquisition.py  cli.py  manifest.py  parsing.py  process_cli.py  processing.py  schema.py  validation.py
src/turbine_guard/database/: __init__.py  base.py  commands.py  enums.py  errors.py  interfaces.py  models.py  repositories.py  session.py
src/turbine_guard/deployment/: __init__.py  cli.py  export.py  manifest.py  restore.py  startup.py
src/turbine_guard/features/: __init__.py  build_cli.py  builder.py  config.py  labels.py  manifest.py  pipeline.py  splits.py
src/turbine_guard/modeling/: __init__.py  alerts.py  artifacts.py  cli.py  config.py  conformal.py  data.py  estimators.py  metrics.py  pipeline.py  reporting.py  selection.py  (+1 more)
tests/: conftest.py
tests/integration/: conftest.py  test_dashboard_postgres.py  test_fd001_features_real_data.py  test_fd001_mlflow_real_artifacts.py  test_fd001_modeling_real_data.py  test_fd001_real_data.py  test_loop9_lifecycle_postgres.py  test_online_inference_postgres.py  test_postgres_operational.py  test_replay_postgres.py
tests/unit/: replay_fakes.py  test_acquisition.py  test_acquisition_cli.py  test_api_cli.py  test_bootstrap.py  test_build_cli.py  test_candidate_comparison.py  test_champion_selection.py  test_conformal.py  test_dashboard.py  test_database_commands.py  test_deployment_bundle.py  test_feature_builder.py  test_feature_consistency.py  test_feature_leakage.py  test_feature_pipeline.py  test_health_api.py  test_health_service.py  test_labels.py  test_lifecycle_registry.py  test_logging_config.py  test_maintenance_simulation.py  test_manifest.py  test_mlflow_config.py  test_mlflow_tracking.py  test_model_estimators.py  test_model_loader.py  test_model_metrics.py  test_modeling_data.py  test_monitoring_reports.py  test_online_api.py  test_online_schemas.py  test_parsing.py  test_process_cli.py  test_processing.py  test_render_config.py  test_replay_cli.py  test_replay_client.py  test_replay_control.py  test_replay_engine.py  (+8 more)
(+61 files in other folders)
