[project]
name = "turbine-guard"
dynamic = ["version"]
description = "Predictive-maintenance ML platform for turbine sensor data, built on public NASA C-MAPSS turbofan degradation data."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "pandas>=2.2",
    "pyarrow>=17",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "mypy>=1.13",
    "nbconvert>=7.16",
    "pandas-stubs>=2.2",
    "pre-commit>=4.0",
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/turbine_guard/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/turbine_guard"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
# Notebooks legitimately print, import inline per section, and zip over
# equal-length plot grids; application code keeps the strict rules.
"*.ipynb" = ["T20", "E402", "B905"]

[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["."]
markers = [
    "real_data: local integration tests that need the acquired FD001 dataset",
]
